feat: create list opening swagger documentation
